--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@ pressure.</p>
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Marlon</p>
+            <p class="footer__title">Ridhin</p>
             <div class="footer__social">
-                <a href="#" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
-                <a href="#" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
+                <a href="" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
+                <a href="www.instagram.cpm/l.u.ffy__" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://twitter.com/ridhinofficial" class="footer__icon"><i class='bx bxl-twitter' ></i></a>
             </div>
             <p class="footer__copy">&#169; Bedimcode. All rigths reserved</p>
         </footer>
