--- a/index.html
+++ b/index.html
@@ -103,87 +103,66 @@ footer {
 
   </style>
 </head>
-<body><canvas id="matrix"></canvas>
+<body><canvas id="network"></canvas>
 
-<nav>
-  <a href="#home">HOME</a>
-  <a href="#experience">EXPERIENCE</a>
-  <a href="#skills">SKILLS</a>
-  <a href="#projects">PROJECTS</a>
-  <a href="#education">EDUCATION</a>
-</nav><section id="home">
-  <h1>> Ridhin V</h1>
-  <div class="terminal">
-    <p>> Technical Support Specialist</p>
-    <p>> Network Administration | L1–L3 Troubleshooting</p>
-    <p>> Routing | Switching | Firewalls | WiFi</p>
-    <p>> Status: ONLINE</p>
-  </div>
-</section><section id="experience">
-  <h2>Experience</h2>
-  <div class="terminal">
-    <p>Liscom Solutions and Services Pvt Ltd (2023–2025)</p>
-    <ul>
-      <li>Network incident monitoring and resolution</li>
-      <li>LAN/WAN, routing, switching, IP troubleshooting</li>
-      <li>Remote support for routers, switches, firewalls</li>
-      <li>Escalation handling with L3 teams</li>
-    </ul>
-  </div>
-</section><section id="skills">
-  <h2>Skills</h2>
-  <div class="cards">
-    <div class="card">Network Administration</div>
-    <div class="card">LAN / WAN</div>
-    <div class="card">Routing & Switching</div>
-    <div class="card">DNS / DHCP</div>
-    <div class="card">VLAN Configuration</div>
-    <div class="card">WiFi Troubleshooting</div>
-    <div class="card">Windows & Linux Support</div>
-    <div class="card">Remote Technical Support</div>
-  </div>
-</section><section id="projects">
-  <h2>Projects</h2>
-  <div class="cards">
-    <div class="card">Drone Project – Live streaming & image transmission</div>
-    <div class="card">Li‑Fi Project – Data transmission using light</div>
-  </div>
-</section><section id="education">
-  <h2>Education & Certifications</h2>
-  <div class="terminal">
-    <p>Hardware & Networking – SDC Network Academy</p>
-    <p>Diploma in Electronics Engineering</p>
-    <p>Certifications: CCNP, CCNA, MCSE, RHCE, Network+</p>
-  </div>
-</section><footer>
-  > SYSTEM © 2026 | Ridhin V | GitHub Cyber Portfolio
-</footer><script>
-  const canvas = document.getElementById('matrix');
+<script>
+  const canvas = document.getElementById('network');
   const ctx = canvas.getContext('2d');
-  canvas.width = window.innerWidth;
-  canvas.height = window.innerHeight;
+  let w, h;
 
-  const letters = '01';
-  const fontSize = 14;
-  const columns = canvas.width / fontSize;
-  const drops = Array(Math.floor(columns)).fill(1);
+  function resize() {
+    w = canvas.width = window.innerWidth;
+    h = canvas.height = window.innerHeight;
+  }
+  window.addEventListener('resize', resize);
+  resize();
 
-  function drawMatrix() {
-    ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
-    ctx.fillStyle = '#22c55e';
-    ctx.font = fontSize + 'px monospace';
+  const NODE_COUNT = 90;
+  const nodes = [];
 
-    for (let i = 0; i < drops.length; i++) {
-      const text = letters[Math.floor(Math.random() * letters.length)];
-      ctx.fillText(text, i * fontSize, drops[i] * fontSize);
-      if (drops[i] * fontSize > canvas.height && Math.random() > 0.975) {
-        drops[i] = 0;
-      }
-      drops[i]++;
-    }
+  for (let i = 0; i < NODE_COUNT; i++) {
+    nodes.push({
+      x: Math.random() * w,
+      y: Math.random() * h,
+      vx: (Math.random() - 0.5) * 0.6,
+      vy: (Math.random() - 0.5) * 0.6,
+    });
   }
 
-  setInterval(drawMatrix, 33);
+  function draw() {
+    ctx.clearRect(0, 0, w, h);
+
+    for (let i = 0; i < nodes.length; i++) {
+      const a = nodes[i];
+      a.x += a.vx;
+      a.y += a.vy;
+
+      if (a.x < 0 || a.x > w) a.vx *= -1;
+      if (a.y < 0 || a.y > h) a.vy *= -1;
+
+      ctx.beginPath();
+      ctx.arc(a.x, a.y, 2, 0, Math.PI * 2);
+      ctx.fillStyle = '#22c55e';
+      ctx.fill();
+
+      for (let j = i + 1; j < nodes.length; j++) {
+        const b = nodes[j];
+        const dx = a.x - b.x;
+        const dy = a.y - b.y;
+        const dist = Math.sqrt(dx * dx + dy * dy);
+
+        if (dist < 120) {
+          ctx.beginPath();
+          ctx.moveTo(a.x, a.y);
+          ctx.lineTo(b.x, b.y);
+          ctx.strokeStyle = `rgba(34,197,94,${1 - dist / 120})`;
+          ctx.stroke();
+        }
+      }
+    }
+    requestAnimationFrame(draw);
+  }
+
+  draw();
 </script></body>
 </html>
